// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsPoplist renders correctly 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1xadrrn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4A4F62;
}

.cache-hrwchk {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-hrwchk.cache-hrwchk {
  margin-right: 0;
}

.cache-wuclc1-Tag {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-18qn0m9 {
  box-shadow: 0 -1px 5px 3px rgba(165, 165, 205, 0.15);
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FCFCFD;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-bdj6wl {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-bdj6wl.cache-bdj6wl {
  margin: 4px;
}

.cache-1rzsa5r {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-1xadrrn eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-hrwchk"
        >
          <span
            aria-disabled="false"
            class="cache-wuclc1-Tag e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
      </div>
      +1
      <div
        class="cache-18qn0m9 eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-bdj6wl"
        >
          <span
            aria-disabled="false"
            class="cache-1rzsa5r e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
    </div>
     
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1xadrrn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4A4F62;
}

.cache-z7dmmg {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-z7dmmg.cache-z7dmmg {
  margin-right: 8px;
}

.cache-wuclc1-Tag {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-hrwchk {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-hrwchk.cache-hrwchk {
  margin-right: 0;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-1xadrrn eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-z7dmmg"
        >
          <span
            aria-disabled="false"
            class="cache-wuclc1-Tag e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-hrwchk"
        >
          <span
            aria-disabled="false"
            class="cache-wuclc1-Tag e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1xadrrn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4A4F62;
}

.cache-z7dmmg {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-z7dmmg.cache-z7dmmg {
  margin-right: 8px;
}

.cache-wuclc1-Tag {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-hrwchk {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-hrwchk.cache-hrwchk {
  margin-right: 0;
}

.cache-18qn0m9 {
  box-shadow: 0 -1px 5px 3px rgba(165, 165, 205, 0.15);
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FCFCFD;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-bdj6wl {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-bdj6wl.cache-bdj6wl {
  margin: 4px;
}

.cache-1rzsa5r {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-1xadrrn eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-z7dmmg"
        >
          <span
            aria-disabled="false"
            class="cache-wuclc1-Tag e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-hrwchk"
        >
          <span
            aria-disabled="false"
            class="cache-wuclc1-Tag e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
      +1
      <div
        class="cache-18qn0m9 eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-bdj6wl"
        >
          <span
            aria-disabled="false"
            class="cache-1rzsa5r e1vt8sjg1"
          >
            provider
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1xadrrn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4A4F62;
}

.cache-hrwchk {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-hrwchk.cache-hrwchk {
  margin-right: 0;
}

.cache-wuclc1-Tag {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-18qn0m9 {
  box-shadow: 0 -1px 5px 3px rgba(165, 165, 205, 0.15);
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FCFCFD;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-bdj6wl {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-bdj6wl.cache-bdj6wl {
  margin: 4px;
}

.cache-1rzsa5r {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-1xadrrn eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-hrwchk"
        >
          <span
            aria-disabled="false"
            class="cache-wuclc1-Tag e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
      </div>
      +2
      <div
        class="cache-18qn0m9 eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-bdj6wl"
        >
          <span
            aria-disabled="false"
            class="cache-1rzsa5r e1vt8sjg1"
          >
            cloud
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-bdj6wl"
        >
          <span
            aria-disabled="false"
            class="cache-1rzsa5r e1vt8sjg1"
          >
            provider
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with multiline 1`] = `
<DocumentFragment>
  .cache-10tjcsc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-l52jtg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4A4F62;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-l52jtg>* {
  margin-bottom: 8px;
}

.cache-z7dmmg {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-z7dmmg.cache-z7dmmg {
  margin-right: 8px;
}

.cache-wuclc1-Tag {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-hrwchk {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-hrwchk.cache-hrwchk {
  margin-right: 0;
}

.cache-18qn0m9 {
  box-shadow: 0 -1px 5px 3px rgba(165, 165, 205, 0.15);
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FCFCFD;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-bdj6wl {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-bdj6wl.cache-bdj6wl {
  margin: 4px;
}

.cache-1rzsa5r {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div>
    <div
      class="e1l6meh00 cache-10tjcsc e1l6meh01"
    >
      <div
        class="cache-l52jtg eom2dbt1"
      >
        <div
          class="e1vt8sjg2 cache-z7dmmg"
        >
          <span
            aria-disabled="false"
            class="cache-wuclc1-Tag e1vt8sjg1"
          >
            scaleway
          </span>
        </div>
        <div
          class="e1vt8sjg2 cache-hrwchk"
        >
          <span
            aria-disabled="false"
            class="cache-wuclc1-Tag e1vt8sjg1"
          >
            cloud
          </span>
        </div>
      </div>
      +1
      <div
        class="cache-18qn0m9 eom2dbt0"
      >
        <div
          class="e1vt8sjg2 cache-bdj6wl"
        >
          <span
            aria-disabled="false"
            class="cache-1rzsa5r e1vt8sjg1"
          >
            provider
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with not tags 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
